@@ -6,7 +6,7 @@
   <%= f.label :gender, nil, class: 'control-label' %>
   <div class="controls radio">
     <% Applicant::GENDER.each do |name, value| %>
-      <%= f.radio_button :gender, value %> <label><%= name %></label>
+      <label><%= f.radio_button :gender, value %> <%= name %></label>
     <% end %>
   </div>
 </div>
